--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "create-react-app": "^5.0.1",
-    "dot-env": "^0.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
     "nodemon": "^2.0.20"
